--- a/components/cart/cart.html
+++ b/components/cart/cart.html
@@ -15,7 +15,7 @@
                             <tr>
                                 <td>
                                     <div class="productname">
-                                        <img ng-src="{{::item.images[0].url.https}}" />
+                                        <img ng-src="{{::item.image.href}}" />
                                         <div class="producttitle" ng-bind="::item.name"></div>
                                     </div>
                                 </td>
