--- a/components/checkout/checkout.html
+++ b/components/checkout/checkout.html
@@ -174,7 +174,7 @@
                                 <tr>
                                     <td style="width: 50%;">
                                         <div class="productname">
-                                            <img ng-src="{{::item.images[0].url.https}}" />
+                                            <img ng-src="{{::item.image.href}}" />
                                             <div class="producttitle text-center" ng-bind="::item.name"></div>
                                         </div>
                                     </td>
