--- a/components/productDetails/productDetails.html
+++ b/components/productDetails/productDetails.html
@@ -1,7 +1,7 @@
 <div class="jumbotron text-center">
     <div class="row">
         <div class="col-md-7">
-            <img ng-src="{{::vm.product.images[0].url.https}}" />
+            <img ng-src="{{::vm.image}}" />
         </div>
         <div class="col-md-5 text-left padding-side-30px">
             <h4 class="item-title" ng-bind="::vm.product.name"></h4>
