--- a/components/shop/shop.html
+++ b/components/shop/shop.html
@@ -4,14 +4,14 @@
     </div>
     <div class="col-md-12 box-top shop-height">
         <span class="title heading-font" ng-bind="::vm.labelService.labels.featuredProductsTitle"></span>
-        <div class="col-md-6 text-center product" ng-repeat="product in ::vm.products">
+        <div class="col-md-4 text-center product" ng-repeat="product in ::vm.products">
             <img ng-src="{{::vm.images[$index].link.href}}">
             <h3 ng-bind="::product.name"></h3>
             <p class="small">
-            {{::product.price.data.raw.without_tax | currency: '&#8377;'}}
+            {{::product.price[0].amount | currency: '&#8377;'}}
             </p>
             <p></p>
-            <p ng-bind="::product.description"></p>
+            <p ng-bind="::product.description" class="text-overflow-shop"></p>
             <br>
             <a href="#/product/{{::product.id}}" class="btn btn-important" ng-bind="::vm.labelService.labels.buyNowButton"></a>
         </div>
