--- a/components/productDetails/productDetails.html
+++ b/components/productDetails/productDetails.html
@@ -1,12 +1,17 @@
 <div class="jumbotron text-center">
     <div class="row">
         <div class="col-md-7">
-            <img ng-src="{{::vm.image}}" />
+			<div style="width:400px; margin:auto;">
+				<div uib-carousel ng-if="vm.product.relationships.files.data.length" active="vm.product.active">
+				  <div uib-slide ng-repeat="image in vm.product.relationships.files.data" index="$index">
+					<img ng-src="{{(vm.images | filter:{'id': image.id})[0].link.href}}" class="img-responsive" style="margin:auto;padding: 20%;">
+				  </div>
+				</div>
+			</div>
         </div>
         <div class="col-md-5 text-left padding-side-30px">
             <h4 class="item-title" ng-bind="::vm.product.name"></h4>
             <p><h3><span ng-bind="::vm.product.price[0].amount | currency: '&#8377;'"></span></h3></p>
-            <p ng-bind="::vm.product.description"></p>
             <br/>
             <div style="width:120px;">
                 <div class="input-group">
@@ -20,11 +25,13 @@
                 </div>
             </div>
             <br/>
-        <div ng-if="vm.cartItem" class="alert alert-warning" ng-bind="vm.labelService.labels.itemInCart"></div>
+			<div ng-if="vm.cartItem" class="alert alert-warning" ng-bind="vm.labelService.labels.itemInCart"></div>
             <p>
                 <button ng-if="!vm.cartItem" class="btn btn-important" ng-bind="::vm.labelService.labels.productBuyNow" ng-click="vm.updateCart()"></button>
                 <button ng-if="vm.cartItem" class="btn btn-important" ng-bind="::vm.labelService.labels.productUpdateNow" ng-click="vm.updateCart()"></button>
             </p>
+			<br/>
+            <p ng-bind="::vm.product.description"></p>
             <br/>
         </div>
         <div class="loading backdrop-color" ng-show="vm.loading">
