--- a/components/shop/shop.css
+++ b/components/shop/shop.css
@@ -2,8 +2,28 @@ shop>.jumbotron {
     position: relative;
 }
 
+shop img.img-padding {
+	padding: 20% 20% 0px 20%;
+}
+
 .shop-height {
     min-height: 650px;
+}
+
+.shop-height a.product-title, .shop-height a.product-title:focus, .shop-height a.product-title:hover {
+	color: inherit;
+}
+.carousel-control.right , .carousel-control.left{
+	background-image:none;
+	color: #0a0a0a;
+}
+
+.banner-carousel .carousel-control {
+	display:none;
+}
+shop select {
+    margin: auto;
+    min-width: 50px;
 }
 
 .text-overflow-shop {
