--- a/components/shop/shop.html
+++ b/components/shop/shop.html
@@ -1,12 +1,44 @@
+<div uib-carousel active="vm.active" class="banner-carousel hidden-xs" interval="3000">
+  <div uib-slide index="0">
+	<img src="/resources/01.jpg" class="img-responsive">
+  </div>
+  <div uib-slide index="1">
+	<img src="/resources/02.jpg" class="img-responsive">
+  </div>
+</div>
+<div uib-carousel active="vm.active" class="banner-carousel visible-xs" interval="3000">
+  <div uib-slide index="0">
+	<img src="/resources/01_mobile.jpg" class="img-responsive" style="margin:auto;">
+  </div>
+  <div uib-slide index="1">
+	<img src="/resources/02_mobile.jpg" class="img-responsive" style="margin:auto;">
+  </div>
+</div>
 <div class="jumbotron row onsale text-center">
     <div class="loading backdrop-color" ng-show="vm.productsLoading">
         <div class="loading-image"><i class="fa fa-refresh"></i></div>
     </div>
     <div class="col-md-12 box-top shop-height">
         <span class="title heading-font" ng-bind="::vm.labelService.labels.featuredProductsTitle"></span>
-        <div class="col-md-4 text-center product" ng-repeat="product in ::vm.products">
-            <img ng-src="{{::vm.images[$index].link.href}}">
-            <h3 ng-bind="::product.name"></h3>
+		<div class="margin-top-30" ng-show="vm.products">
+			<div class="btn-group hidden-xs">
+				<label class="btn btn-default" ng-model="vm.selectedCategory" uib-btn-radio="'All'" uncheckable>All</label>
+				<label class="btn btn-default" ng-model="vm.selectedCategory" uib-btn-radio="type.id" ng-repeat="type in vm.categories">{{type.name}}</label>
+			</div>
+			<select ng-model="vm.selectedCategory" class="visible-xs">
+				<option value="All">All</option>
+				<option ng-repeat="type in vm.categories" value="{{type.id}}">{{type.name}}</option>
+			</select>
+		</div>
+        <div class="col-md-3 col-sm-6 text-center product" ng-repeat="product in vm.products | productFilter: vm.selectedCategory">
+			<a href="#/product/{{::product.id}}">
+				<div uib-carousel ng-if="product.relationships.files.data.length" active="product.active">
+				  <div uib-slide ng-repeat="image in product.relationships.files.data" index="$index">
+					<img ng-src="{{(vm.images | filter:{'id': image.id})[0].link.href}}" class="img-responsive img-padding" style="margin:auto;">
+				  </div>
+				</div>
+			</a>
+            <a href="#/product/{{::product.id}}" class="product-title"><h3 ng-bind="::product.name"></h3></a>
             <p class="small">
             {{::product.price[0].amount | currency: '&#8377;'}}
             </p>
