--- a/components/shop/shop.html
+++ b/components/shop/shop.html
@@ -22,30 +22,30 @@
         <span class="title heading-font" ng-bind="::vm.labelService.labels.featuredProductsTitle"></span>
 		<div class="margin-top-30" ng-show="vm.products">
 			<div class="btn-group hidden-xs">
+          <!--"custom":{"label":"Custom Nutrients","state":"custom"}-->
 				<label class="btn btn-default" ng-model="vm.selectedCategory" uib-btn-radio="'All'" uncheckable>All</label>
-				<label class="btn btn-default" ng-model="vm.selectedCategory" uib-btn-radio="type.id" ng-repeat="type in vm.categories">{{type.name}}</label>
+        <label class="btn btn-default" ng-model="vm.selectedCategory" uib-btn-radio="type.id" ng-repeat="type in vm.categories.slice().reverse()">{{type.name}}</label>
+        <label class="btn btn-default" ng-model="vm.selectedCategory" uib-btn-radio="'Personalize your Nutrients'" uncheckable>Personalize your Nutrients</label>
 			</div>
 			<select ng-model="vm.selectedCategory" class="visible-xs">
 				<option value="All">All</option>
 				<option ng-repeat="type in vm.categories" value="{{type.id}}">{{type.name}}</option>
 			</select>
 		</div>
-        <div class="col-md-3 col-sm-6 text-center product" ng-repeat="product in vm.products | productFilter: vm.selectedCategory">
-			<a href="#/product/{{::product.id}}">
-				<div uib-carousel ng-if="product.relationships.files.data.length" active="product.active">
-				  <div uib-slide ng-repeat="image in product.relationships.files.data" index="$index">
-					<img ng-src="{{(vm.images | filter:{'id': image.id})[0].link.href}}" class="img-responsive img-padding" style="margin:auto;">
-				  </div>
-				</div>
-			</a>
-            <a href="#/product/{{::product.id}}" class="product-title"><h3 ng-bind="::product.name"></h3></a>
-            <p class="small">
-            {{::product.price[0].amount | currency: '&#8377;'}}
-            </p>
-            <p></p>
-            <p ng-bind="::product.description" class="text-overflow-shop"></p>
-            <br>
-            <a href="#/product/{{::product.id}}" class="btn btn-important" ng-bind="::vm.labelService.labels.buyNowButton"></a>
+        <div ng-if="vm.selectedCategory != 'Personalize your Nutrients'" class="col-md-3 col-sm-6 text-center product" ng-repeat="product in vm.products | productFilter: vm.selectedCategory">
+			
+          <div uib-carousel ng-if="product.relationships.files.data.length" class="productcarousel nofixed" active="product.active">
+            <div uib-slide ng-repeat="image in product.relationships.files.data" index="$index">
+            <img ng-src="{{(vm.images | filter:{'id': image.id})[0].link.href}}" class="img-responsive img-padding" style="margin:auto;">
+            </div>
+          </div>
+          <a href="#/product/{{::product.id}}" class="product-title"><h3 ng-bind="::product.name"></h3></a>
+          <p class="small">
+          {{::product.price[0].amount | currency: '&#8377;'}}
+          </p>
+          <p ng-bind="::product.description" class="text-overflow-shop"></p>
+          <a href="#/product/{{::product.id}}" class="btn btn-important" ng-bind="::vm.labelService.labels.buyNowButton"></a>
         </div>
+        <div ng-if="vm.selectedCategory == 'Personalize your Nutrients'"><custom></custom></div>
     </div>
 </div>
