--- a/app.css
+++ b/app.css
@@ -1,6 +1,6 @@
 html, body {
 	height: 100%;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Century Gothic','Lato', sans-serif;
     overflow-x: hidden;
 }
 [ui-view] {
@@ -105,4 +105,73 @@ html, body {
     -ms-animation-duration: 5000ms;
     -ms-animation-iteration-count: infinite;
     -ms-animation-timing-function: linear;
+}
+
+/* The Modal (background) */
+.modal-custom {
+    position: fixed; /* Stay in place */
+    z-index: 1000; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+
+/* Modal Content (Image) */
+.modal-content {
+    margin: auto;
+    display: block;
+    height: 80%;
+}
+
+/* Caption of Modal Image (Image Text) - Same Width as the Image */
+.modal-custom .caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+}
+
+/* Add Animation - Zoom in the Modal */
+.modal-content, .modal-custom .caption { 
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+    from {transform:scale(0)} 
+    to {transform:scale(1)}
+}
+
+/* The Close Button */
+.modal-custom .close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.modal-custom .close:hover,
+.modal-custom .close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+    .modal-content {
+        width: 100%;
+    }
 }
