--- a/components/checkout/checkout.html
+++ b/components/checkout/checkout.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
     <div class="row">
         <div class="col-md-9">
-			<form name="customer" ng-show="!vm.billingInfo.firstName">
+			<!--<form name="customer" ng-show="!vm.billingInfo.firstName">
 				<div class="checkout-tab-bar row">
                     <div class="col-md-12 columns">
                         <h3>
@@ -16,8 +16,8 @@
 					<br/>
 					<a class="btn btn-important" ng-disabled="customer.$invalid" ng-click="vm.checkCustomer()">Next</a>
 				</div>
-			</form>
-            <form name="address" novalidate ng-show="vm.billingInfo.firstName">
+			</form>-->
+            <form name="address" novalidate>
                 <div class="checkout-tab-bar row">
                     <div class="col-md-12 columns">
                         <h3>
@@ -40,22 +40,22 @@
                                 <div name="billing-info" class="row">
                                     <div class="col-sm-6 form-group">
                                         <label for="billing_firstName">First Name *</label>
-                                        <input type="text" class="form-control" ng-model="vm.billingInfo.firstName" name="billing_firstName" required placeholder="First Name" disabled/>
+                                        <input type="text" class="form-control" ng-model="vm.billingInfo.firstName" name="billing_firstName" required placeholder="First Name" />
                                         <span class="error small text-danger" ng-show="address.billing_firstName.$touched && address.billing_firstName.$invalid">Please enter your first name</span>
                                     </div>
                                     <div class="col-sm-6 form-group">
                                         <label for="billing_lastName">Last Name *</label>
-                                        <input type="text" class="form-control" ng-model="vm.billingInfo.lastName" name="billing_lastName" required placeholder="Last Name" disabled/>
+                                        <input type="text" class="form-control" ng-model="vm.billingInfo.lastName" name="billing_lastName" required placeholder="Last Name" />
                                         <span class="error small text-danger" ng-show="address.billing_lastName.$touched && address.billing_lastName.$invalid">Please enter your last name</span>
                                     </div>
                                     <div class="col-sm-6 form-group">
                                         <label for="billing_email">E-mail Address *</label>
-                                        <input type="email" class="form-control" ng-model="vm.billingInfo.email" name="billing_email" required placeholder="example@email.com" disabled/>
+                                        <input type="email" class="form-control" ng-model="vm.billingInfo.email" name="billing_email" required placeholder="example@email.com" />
                                         <span class="error small text-danger" ng-show="address.billing_email.$touched && address.billing_email.$invalid">Please enter a valid email address</span>
                                     </div>
                                     <div class="col-sm-6 form-group">
                                         <label for="billing_phone">Phone Number *</label>
-                                        <input type="number" class="form-control" minlength="10" maxlength="10" ng-model="vm.billingInfo.phone" name="billing_phone" required placeholder="0123456789" />
+                                        <input type="text" class="form-control" minlength="10" maxlength="10" ng-model="vm.billingInfo.phone" name="billing_phone" required placeholder="0123456789" />
                                         <span class="error small text-danger" ng-show="address.billing_phone.$touched && address.billing_phone.$invalid">Please enter a valid phone number</span>
                                     </div>
                                     <div class="col-sm-12 form-group">
@@ -105,17 +105,17 @@
                                 <div name="shipping-info" class="row">
                                     <div class="col-sm-6 form-group">
                                         <label for="shipping_firstName">First Name *</label>
-                                        <input type="text" class="form-control" ng-model="vm.shippingInfo.firstName" name="shipping_firstName" required placeholder="First Name" disabled/>
+                                        <input type="text" class="form-control" ng-model="vm.shippingInfo.firstName" name="shipping_firstName" required placeholder="First Name" />
                                         <span class="error small text-danger" ng-show="address.shipping_firstName.$touched && address.shipping_firstName.$invalid">Please enter your first name</span>
                                     </div>
                                     <div class="col-sm-6 form-group">
                                         <label for="shipping_lastName">Last Name *</label>
-                                        <input type="text" class="form-control" ng-model="vm.shippingInfo.lastName" name="shipping_lastName" required placeholder="Last Name" disabled/>
+                                        <input type="text" class="form-control" ng-model="vm.shippingInfo.lastName" name="shipping_lastName" required placeholder="Last Name" />
                                         <span class="error small text-danger" ng-show="address.shipping_lastName.$touched && address.shipping_lastName.$invalid">Please enter your last name</span>
                                     </div>
                                     <div class="col-sm-6 form-group">
                                         <label for="shipping_phone">Phone Number *</label>
-                                        <input type="number" class="form-control" ng-model="vm.shippingInfo.phone" name="shipping_phone" minlength="10" maxlength="10" ng-disabled="vm.sameAddress" required placeholder="0123456789" />
+                                        <input type="text" class="form-control" ng-model="vm.shippingInfo.phone" name="shipping_phone" minlength="10" maxlength="10" ng-disabled="vm.sameAddress" required placeholder="0123456789" />
                                         <span class="error small text-danger" ng-show="address.shipping_phone.$touched && address.shipping_phone.$invalid">Please enter a valid phone number</span>
                                     </div>
                                     <div class="col-sm-12 form-group">
