--- a/components/shop/shop.html
+++ b/components/shop/shop.html
@@ -1,17 +1,11 @@
 <div uib-carousel active="vm.active" class="banner-carousel hidden-xs" interval="3000">
   <div uib-slide index="0">
-	<img src="/resources/01.jpg" class="img-responsive">
-  </div>
-  <div uib-slide index="1">
-	<img src="/resources/02.jpg" class="img-responsive">
+	<img src="resources/01.jpg" class="img-responsive">
   </div>
 </div>
 <div uib-carousel active="vm.active" class="banner-carousel visible-xs" interval="3000">
   <div uib-slide index="0">
-	<img src="/resources/01_mobile.jpg" class="img-responsive" style="margin:auto;">
-  </div>
-  <div uib-slide index="1">
-	<img src="/resources/02_mobile.jpg" class="img-responsive" style="margin:auto;">
+	<img src="resources/01_mobile.jpg" class="img-responsive" style="margin:auto;">
   </div>
 </div>
 <div class="jumbotron row onsale text-center">
