--- a/components/shop/shop.html
+++ b/components/shop/shop.html
@@ -1,6 +1,6 @@
 <div uib-carousel active="vm.active" class="banner-carousel hidden-xs" interval="3000">
   <div uib-slide index="0">
-	<img src="resources/01.jpg" class="img-responsive">
+	<img src="resources/01.JPG" class="img-responsive">
   </div>
 </div>
 <div uib-carousel active="vm.active" class="banner-carousel visible-xs" interval="3000">
