added html support

--- a/components/shop/shop.css
+++ b/components/shop/shop.css
@@ -38,9 +38,17 @@ shop select {
     min-width: 50px;
 }
 
-.text-overflow-shop, .shop-height a.product-title{
-	height: 25px;
+.text-overflow-shop, .shop-height a.product-title, .text-overflow-shop blockquote{
+	height: 45px;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
+}
+
+shop blockquote {
+    margin: 0px;
+}
+
+shop p.small {
+    margin-bottom: 0px;
 }
