added html support

--- a/components/productDetails/productDetails.css
+++ b/components/productDetails/productDetails.css
@@ -21,6 +21,9 @@ productdetails .carousel img {
 
 .productcarousel .item>div img{
     display: inline;
+}
+
+productdetails .productcarousel .item>div img {
     cursor: zoom-in;
 }
 
