lazy load images

--- a/components/shop/shop.html
+++ b/components/shop/shop.html
@@ -39,7 +39,7 @@
 			
           <div uib-carousel ng-if="product.relationships.files.data.length" class="productcarousel nofixed" active="product.active">
             <div uib-slide ng-repeat="image in product.relationships.files.data" index="$index">
-            <img lazy-img="{{(vm.images | filter:{'id': image.id})[0].link.href}}" class="img-responsive img-padding" style="margin:auto;">
+            <img ng-src="{{$index == product.active?(vm.images | filter:{'id': image.id})[0].link.href:''}}" class="img-responsive img-padding" style="margin:auto;">
             </div>
           </div>
           <a href="#/product/{{::product.id}}" class="product-title"><h3 ng-bind="::product.name"></h3></a>
