lazy load images

--- a/components/shop/shop.html
+++ b/components/shop/shop.html
@@ -9,7 +9,7 @@
 	<img src="resources/03.PNG" class="img-responsive">
   </div>
 </div>
-<div uib-carousel active="vm.active" class="banner-carousel visible-xs" interval="3000">
+<div uib-carousel active="vm.mobactive" class="banner-carousel visible-xs" interval="3000">
   <div uib-slide index="0">
 	<img src="resources/01_mobile.PNG" class="img-responsive" style="margin:auto;">
   </div>
