changes at house

--- a/components/shop/shop.html
+++ b/components/shop/shop.html
@@ -1,6 +1,6 @@
 <div uib-carousel active="vm.active" class="banner-carousel hidden-xs" interval="3000">
   <div uib-slide index="0">
-  <img src="resources/04.PNG" class="img-responsive">
+  <img src="resources/04.png" class="img-responsive">
   </div>
   <div uib-slide index="1">
 	<img src="resources/01.JPG" class="img-responsive">
@@ -14,7 +14,7 @@
 </div>
 <div uib-carousel active="vm.mobactive" class="banner-carousel visible-xs" interval="3000">
   <div uib-slide index="0">
-    <img src="resources/03_mobile.PNG" class="img-responsive" style="margin:auto;">
+    <img src="resources/03_mobile.png" class="img-responsive" style="margin:auto;">
   </div>
   <div uib-slide index="1">
 	<img src="resources/01_mobile.PNG" class="img-responsive" style="margin:auto;">
